k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`miapp.local`)
      kind: Rule
      services:
        - name: web-service
          port: 80
